--- a/package.json
+++ b/package.json
@@ -2,18 +2,20 @@
   "name": "TheormechApp",
   "version": "1.0.0",
   "description": "",
+  "homepage": "https://03regionkruto.github.io/TheormechApp/",
   "main": "index.js",
   "scripts": {
     "start": "cross-env PORT=10888 HTTPS=true react-scripts start",
     "build": "react-scripts build",
     "predeploy": "npm run build",
-    "deploy": "vk-miniapps-deploy"
+    "deploy": "gh-pages -d build"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "devDependencies": {
     "cross-env": "^5.2.0",
+    "gh-pages": "^2.2.0",
     "react-hot-loader": "^4.9.0",
     "react-scripts": "^3.4.1"
   },
