--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://03regionkruto.github.io/TheormechApp/",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env PORT=10888 HTTPS=false react-scripts start",
+    "start": "cross-env PORT=10888 HTTPS=true react-scripts start",
     "build": "react-scripts build",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
