--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "eruda-dom": "^2.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-draggable": "^4.3.1"
+    "react-dom": "^16.9.0"
   },
   "browserslist": {
     "production": [
