--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cross-env": "^5.2.0",
     "gh-pages": "^2.2.0",
     "react-hot-loader": "^4.9.0",
+    "react-router": "^5.2.0",
     "react-scripts": "^3.4.1"
   },
   "dependencies": {
