--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env PORT=10888 HTTPS=true SSL_CRT_FILE=/etc/letsencrypt/live/atake.live/cert.pem SSL_KEY_FILE=/etc/letsencrypt/live/atake.live/privkey.pem react-scripts start",
+    "start": "cross-env PORT=10888 HTTPS=false react-scripts start",
     "build": "react-scripts build",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "cross-env PORT=10888 HTTPS=true SSL_CRT_FILE=/etc/letsencrypt/live/atake.live/cert.pem SSL_KEY_FILE=/etc/letsencrypt/live/atake.live/privkey.pem react-scripts start"
   },
   "keywords": [],
   "author": "",
