--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@vkontakte/vk-miniapps-deploy": "0.0.17",
     "@vkontakte/vkui": "^3.5.0",
     "babel-eslint": "^10.1.0",
+    "canvas-confetti": "^1.2.0",
     "chalk": "^2.4.2",
     "core-js": "^3.6.4",
     "eruda": "^2.2.0",
