--- a/package.json
+++ b/package.json
@@ -3,18 +3,19 @@
   "version": "0.2.4",
   "description": "",
   "main": "index.js",
-  "homepage": "./",
+  "homepage": "https://ogthug-coder.github.io/TheormechApp/",
   "scripts": {
     "start": "cross-env PORT=10888 HTTPS=false react-scripts start",
     "build": "react-scripts build",
     "predeploy": "npm run build",
-    "deploy": "cross-env PORT=10888 HTTPS=true SSL_CRT_FILE=/etc/letsencrypt/live/atake.live/cert.pem SSL_KEY_FILE=/etc/letsencrypt/live/atake.live/privkey.pem react-scripts start"
+    "deploy": "gh-pages -d build"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "devDependencies": {
     "cross-env": "^5.2.0",
+    "gh-pages": "^3.1.0",
     "react-hot-loader": "^4.13.0",
     "react-router": "^5.2.0",
     "react-scripts": "^3.4.4"
